--- a/maven/Jenkinsfile
+++ b/maven/Jenkinsfile
@@ -1,7 +1,7 @@
 pipeline{
   agent any
   environment{
-    jarlocation='C:\ProgramData\Jenkins\.jenkins\workspace\dxc-maven-pipeline\target\my-app-1.0-SNAPSHOT.jar'
+    jarlocation='C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\dxc-maven-pipeline\\target\\my-app-1.0-SNAPSHOT.jar'
   }
   
   tools{
