--- a/tomcat/Jenkinsfile
+++ b/tomcat/Jenkinsfile
@@ -1,27 +1,57 @@
 pipeline{
-    agent any
 
+    agent any     
     tools{
-        maven "Jenkins_mvn"
-    }
 
-    stages{
+        maven "jenkins-mvn"
 
+    }
+
+    environment{
+
+        tomcatWebLocation="\"D:\\Zartab\\Trainings\\DXC Jenkins Training Nov 2021\\apache-tomcat-9.0.55\\apache-tomcat-9.0.55\\webapps\""
+
+        tomcatBinLocation="\"D:\\Zartab\\Trainings\\DXC Jenkins Training Nov 2021\\apache-tomcat-9.0.55\\apache-tomcat-9.0.55\\bin\""
+
+        buildLocation="C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\dxc-deploy-to-tomcat-pipeline\\mywebapp\\target\\mywebapp.war"
+
+    }     
+    stages{         
         stage('Git Checkout'){
-            steps{
 
-            git 'https://github.com/codewithz/dxc-web-app.git'
-            }
-        }
+            steps{             
+                git 'https://github.com/codewithz/dxc-web-app.git'
 
-        stage('Maven Build'){
-            steps{
+            }
+
+        }         stage('Maven Build'){
+
+                      steps{
+
+                          bat """
+
+                          cd mywebapp
+
+                          mvn clean package
+
+                          """
+
+            }
+
+        }    
+    }     
+    post{
+
+        success{             
             bat """
-                cd mywebapp
-                mvn clean package
-            """
-            }
+
+                copy %buildLocation%  %tomcatWebLocation%
+
+                %tomcatBinLocation%\\startup.bat
+
+            """        
         }
 
-    }
+    }
+
 }
